--- a/skeleton.html
+++ b/skeleton.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>General Assembly</title>
   </head>
@@ -19,32 +19,31 @@
   city you're in and whether you're taking the Immersive User Experience (UX)
   course or the Immersive Web Development course.</p>
 
-
-  <p>City:<select>
-      <option value="Hong Kong">Hongkong</option>
-      <option value="London">London</option>
-      <option value="Los Angeles">Los Angeles</option>
-      <option value="New York">New York</option>
-      <option value="Portland">Portland</option>
-      <option value="San Francisco">San Francisco</option>
-      <option value="Seattle">Seattle</option>
-      <option value="Singapore">Singapore</option>
-    </select>
-  </P>
   <form action="success.html">
-    Course:
-    <input type="radio" name="course" value="UX">UX
-    <input type="radio" name="course" value="Web Dev">Web Dev<br>
-    <br>
-    Name:<input type="text" placeholder="e.g John"><br>
-    <br>
-    Email:<input type="text" placeholder="example@gmail.com"><br>
-    <br>
-    Password:<input type="password"><br>
-    <br>
-    <input type="checkbox"> Yes, subscribe me to the General Assembly student newsletter
-    <input type="submit" value="subscribe" name="Subscribe">
-  </form>
+      <p>City:<select>
+          <option value="Hong Kong">Hongkong</option>
+          <option value="London">London</option>
+          <option value="Los Angeles">Los Angeles</option>
+          <option value="New York">New York</option>
+          <option value="Portland">Portland</option>
+          <option value="San Francisco">San Francisco</option>
+          <option value="Seattle">Seattle</option>
+          <option value="Singapore">Singapore</option>
+        </select>
+      </P>
+      Course:
+      <input type="radio" name="course" value="UX">UX
+      <input type="radio" name="course" value="Web Dev">Web Dev<br>
+      <br>
+      Name:<input type="text" placeholder="e.g John"><br>
+      <br>
+      Email:<input type="text" placeholder="example@gmail.com"><br>
+      <br>
+      Password:<input type="password"><br>
+      <br>
+      <input type="checkbox"> Yes, subscribe me to the General Assembly student newsletter<br>
+      <input type="submit" value="subscribe" name="Subscribe">
+   </form>
 
-</body>
+ </body>
 </html>
